--- a/css/style.css
+++ b/css/style.css
@@ -2295,10 +2295,28 @@ body footer .container small {
 .privacy .container li:not(li:nth-child(8)) {
   padding-bottom: 40px;
 }
+.privacy .container .back-btn a {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  -moz-column-gap: 8px;
+       column-gap: 8px;
+  width: -moz-fit-content;
+  width: fit-content;
+  margin: 0 auto;
+  padding-top: 40px;
+}
+.privacy .container .back-btn a img {
+  width: 14px;
+}
+.privacy .container .back-btn a p {
+  color: var(--color-subtitle-text);
+  font-size: 0.75rem;
+  font-weight: 600;
+}
 
 @media screen and (min-width: 960px) {
   .privacy .container {
-    background-image: url(../img/Privacy.svg);
     background-size: 800px;
     background-position: 180px 110px;
     padding-top: 192px;
@@ -2306,16 +2324,25 @@ body footer .container small {
   }
   .privacy .container li {
     font-size: 1rem;
-    letter-spacing: 2px;
-    line-height: 24px;
   }
   .privacy .container li span {
-    display: inline-block;
     font-size: 1.125rem;
-    font-weight: 600;
-    padding-bottom: 12px;
   }
   .privacy .container li:not(li:nth-child(8)) {
     padding-bottom: 80px;
+  }
+  .privacy .container .back-btn a {
+    -moz-column-gap: 8px;
+         column-gap: 8px;
+    width: -moz-fit-content;
+    width: fit-content;
+    margin: 0 auto;
+    padding-top: 80px;
+  }
+  .privacy .container .back-btn a img {
+    width: 14px;
+  }
+  .privacy .container .back-btn a p {
+    font-size: 0.875rem;
   }
 }/*# sourceMappingURL=style.css.map */
